Create logic for buying prepaid ticket.

--- a/ParkingManagement.Servises/ParkingManagement.Servises.csproj
+++ b/ParkingManagement.Servises/ParkingManagement.Servises.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ParkingManagement.Common\ParkingManagement.Common.csproj" />
+    <ProjectReference Include="..\ParkingManagement.Models\ParkingManagement.Models.csproj" />
   </ItemGroup>
 
 </Project>
