--- a/ParkingManagement.Servises/ParkingManagement.Servises.csproj
+++ b/ParkingManagement.Servises/ParkingManagement.Servises.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ParkingManagement.Common\ParkingManagement.Common.csproj" />
     <ProjectReference Include="..\ParkingManagement.Models\ParkingManagement.Models.csproj" />
+    <ProjectReference Include="..\ParkingManagement.Repositories\ParkingManagement.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
